<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">健康快测</string>
    <string name="action_setting">Settings</string>
    <string name="none_record">不记录本次测量</string>
    <string name="new_record">新建档案</string>
    <string name="pr_min">RR最小值</string>
    <string name="pr_max">RR最大值</string>
    <string name="all_name">姓名</string>
    <string name="check_user">切换用户</string>
    <string name="mesurt_ing">测量中</string>
    <string name="incoming_message">为了更准确的评估测量结果，请输入你的相关信息</string>
    <string name="incoming_name">请输入姓名</string>
    <string name="incoming_born">请选择出生年月</string>
    <string name="cancel">取消</string>
    <string name="makesure">确定</string>
    <string name="connect">连接</string>
    <string name="consult_doctor">咨询医生</string>
    <string name="shareother">分享他人</string>
    <string name="share_text">分享</string>
    <string name="mesurt_keep">测量开始，请不要移开您的手指。注意：测量中请保持安静，不要说话，保持情绪稳定</string>
    <string name="start_mesurt">开始测量</string>
    <string name="none_recort">暂无体检报告</string>
    <string name="common_diseases">常见疾病</string>
    <string name="respiratoory_rate_low">呼吸率偏低</string>
    <string name="respiratoory_rate_high">呼吸率偏高</string>
    <string name="respiratoory_rate_middle">呼吸率正常</string>
    <string name="test">测试</string>
    <string name="my_title">我是标题</string>
    <string name="my_return">返回</string>
    <string name="send">发送</string>
    <string name="hrv">心率变异性</string>
    <string name="half">0%</string>
    <string name="restart">重新测量</string>
    <string name="choose">选择用户</string>
    <string name="choosemesurt">选择测量对象</string>
    <string name="nonetwork_choose">网络异常,只能进行体验测量</string>
    <string name="historrecord">历史记录</string>
    <string name="myselfe">(自己)</string>
    <string name="other">其他人</string>
    <string name="checknet">网络连接失败,请检查网络设置</string>
    <string name="font_model">字号</string>
    <string name="font_size">字体大小</string>
    <string name="standard">标准</string>
    <string name="less">较小</string>
    <string name="more">较大</string>
    <string name="min">最小</string>
    <string name="max">最大</string>
    <string name="zer">000</string>
    <string name="per_cent">%</string>
    <string name="degree">℃</string>
    <string name="respiratory_rate_unit">次/每分钟</string>
    <string name="questionMark">\?</string>
    <string name="equalsSign">=</string>
    <string name="and">&amp;</string>
    <string name="en">\n</string>
    <string name="zzzzzx_age">岁</string>
    <string name="fast_mesurt">快速测量中</string>
    <string name="step">步</string>
    <string name="refresh">点击刷新</string>
    <string name="no_network">无法连接到网络</string>
    <string name="movingobjects">计步器</string>
    <string name="install">设置</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="IdentityHeigtText">165</string>
    <string name="IdentityWeigtText">60</string>
    <string name="IdentityYearText">1960年</string>
    <string name="IdentityMonthText">1月</string>
    <string name="spot">.</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="energy">消耗能量:</string>
    <string name="calorie">卡路里</string>
    <string name="step_num">步数</string>
    <string name="target">目标</string>
    <string name="age">岁</string>
    <string name="everyDay">每日</string>
    <string name="distance">距离</string>
    <string name="kilometre">公里</string>
    <string name="quantityHeat">热量</string>
    <string name="kilocalorie">千卡</string>
    <string name="circle1">绕故宫</string>
    <string name="circle2">圈</string>
    <string name="rice">碗米饭</string>
    <string name="zero">0</string>
    <string name="week_monday">一</string>
    <string name="week_tuesday">二</string>
    <string name="week_wednesday">三</string>
    <string name="week_thursday">四</string>
    <string name="week_friday">五</string>
    <string name="week_saturday">六</string>
    <string name="week_sunday">日</string>
    <string name="monday">星期一</string>
    <string name="tuesday"> 星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="user_height">身高(cm)</string>
    <string name="user_weight">体重(kg)</string>
    <string name="user_cancal">取消</string>
    <string name="user_confirm">确定</string>
    <string name="quick_mes">体验测量</string>
    <string name="personal_info_cancal">取消</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_info_next_step">下一步</string>
    <string name="personal_info_birth_year">出生年月</string>
    <string name="personal_info_height">身高</string>
    <string name="personal_info_weight">体重</string>
    <string name="personal_info_choice_man">男</string>
    <string name="personal_info_choice_woman">女</string>
    <string name="personal_info_movement_tendency">运动趋势</string>
    <string name="personal_info_describe">请输入以下信息，我们会为你制定合理的运动目标</string>
    <string name="personal_info_enter_name">请输入姓名</string>
    <string name="finish">完成</string>
    <string name="daytarget">每日运动目标</string>
    <string name="recommend_step">智能推荐步数</string>
    <string name="more_motion">查看更多运动趋势</string>
    <string name="motion_description">运动量的计算是根据Roda和Sizga修正的Harris_Benedict公式推算的</string>
    <string name="new_archives">为了更准确的评估测量结果,请输入您的相关信息</string>
    <string name="enter_name">请输入姓名</string>
    <string name="choice_birthdate">请选择出生年月</string>
    <string name="history">查看历史记录</string>
    <string name="knowlege">了解体温知识</string>
    <string name="sharetodo">分享给他人</string>
    <string name="delete">删除</string>
    <string name="result">测量结果</string>
    <string name="alcohol_text">对准酒精检测器吹气，时间3&#8211;5秒，并保持不动</string>
    <string name="not_preservation">不保存</string>
    <string name="login">前往登录</string>
    <string name="preservation_dialog_title">是否保存数据？</string>
    <string name="preservation_dialog_message">登陆后，测量数据才能保存到您和家人的档案里。</string>
    <string name="concal_dialog_title">确定要删除本次测量数据吗？</string>
    <string name="concal_dialog_message">删除之后就不能恢复了哦</string>
    <string name="quick_dialog_title">现在不能联网,是否进行体验测量?</string>
    <string name="quick_dialog_message">因为无法获取健康档案,只能进行体验测量。您在体验测量时的健康档案,无法保存到健康档案。</string>
    <string name="mg">mg/100ml</string>
    <string name="s">S</string>
    <string name="Blowing">请准备哈气</string>
    <string name="toBlowing">距离1厘米左右缓慢哈气</string>
    <string name="startBlowing">轻缓哈气</string>
    <string name="inMeasure">计算中,请稍候</string>
    <string name="alcohol_normal">正常</string>
    <string name="drink_wine">酒后驾车</string>
    <string name="drunk">醉酒驾车</string>
    <string name="alcohol_content">健康饮酒</string>
    <string name="title_start">“开始测量”后将预热20秒左右，连续测量建议间隔2分钟，酒精浓度过高时延长间隔时间</string>
    <string name="title_wait">请对准手机下端橘红色酒杯口不间断轻缓哈气3到5秒,哈气时保持口腔清洁不要将唾液和食物残渣哈入进气口以免造成堵塞</string>
    <string name="title_countdown">预热中</string>
    <string name="tv_coundown">长期没有使用或吹入较高酒精度后,需要2-10分钟或更长校验时间,等待期间可以体验红鸟手机其它功能,谢谢！</string>
    <string name="prompt">仅供娱乐,酒后请勿驾车,祝各位健康生活,平安出行。</string>
    <string-array name="alcohol_level">
        <item>无酒精</item>
        <item>轻度饮酒</item>
        <item>饮酒</item>
        <item>醉酒</item>
    </string-array>
    <string name="environment">将紫外线传感器朝向被测光源</string>
    <string name="light_count">紫外线指数</string>
    <string name="humidity_title">湿度计</string>
    <string name="pressure_refresh">刷新</string>
    <string name="light_max">强</string>
    <string name="light_middle">较强</string>
    <string name="light_min">正常</string>
    <string name="light_maxtext_ten">紫外很强、有害、尽量不外出，必须外出时，要采取一定的防护措施哦</string>
    <string name="light_mintext">紫外线正常，可以放心外出了</string>
    <string name="light_middletext">紫外线有些强，外出要戴防护帽或太阳镜哦</string>
    <string name="light_maxtext_five">紫外线很强，一定要做好防护哦</string>
    <string name="light_maxtext_seven">紫外线太强了，尽量减少出行，外出时尽可能在遮荫处</string>
    <string name="pressure">气压</string>
    <string name="altitude">海拔</string>
    <string name="pressure_company">hpa</string>
    <string name="altitude_company">m</string>
    <string name="cold">偏冷</string>
    <string name="comfortable">舒适</string>
    <string name="hot">偏热</string>
    <string name="damp">潮湿</string>
    <string name="dry">干燥</string>
    <string name="pressure_detail">海拔是根据标准气象条件下的气压推算得出,因为气压会经常变化,海拔值有一定误差,仅供参考。</string>
    <string name="title_heartRate">心率</string>
    <string name="title_bloodOxygen">测血氧</string>
    <string name="title_bloodPressure">测血压</string>
    <string name="title_temperature">测体温</string>
    <string name="title_respiratoryRate">呼吸率</string>
    <string name="title_cardiogram">测心电</string>
    <string name="physical_examination_welcome">欢迎进入快速体检</string>
    <string name="physical_examination_service">我们将为您提供体温,血压,心电呼吸率,心率血氧各项身体指标检测,体检完成后,系统将根据体检者的基本信息,及体检结果,提供体检报告!</string>
    <string name="rapid_physical_examination">快速体检</string>
    <string name="rapid_physical_examination_presentation">历次体检报告</string>
    <string name="rapid_physical_heartrate">血氧</string>
    <string name="rapid_physical_electrocardiogram">心电心率呼吸率</string>
    <string name="rapid_physical_temperature">测体温</string>
    <string name="rapid_physical_blood_pressure">医用血压计</string>
    <string name="rapid_physical_heart_rate_oxygen">心率血氧</string>
    <string name="rapid_physical_start_measurement">开始测量</string>
    <string name="rapid_physical_skip_measurement">跳过此项检测</string>
    <string name="boot_wizard_skip">跳过</string>
    <string name="label_physical_examination">一键体检</string>
    <string name="boot_wizard_examination">快速体检</string>
    <string name="medical_examination_report">体检报告</string>
    <string name="medical_examination_user">请选择被测量人</string>
    <string name="medical_examination_choose_user">切换用户</string>
    <string name="medical_examination_result">本次体检结果,心率正常,血压正常</string>
    <string name="medical_examination_health_data">健康数据</string>
    <string name="medical_examination_date">2017年3月22日10:00</string>
    <string name="rapid_medical_examination">快速体检</string>
    <string name="medical_examination_rate">血氧</string>
    <string name="medical_examination_electrocardiogram">心电心率呼吸率</string>
    <string name="medical_examination_temperature">测体温</string>
    <string name="medical_examination_blood_pressure">医用血压计</string>
    <string name="rapid_heartrate">测血氧</string>
    <string name="health_heart_rate">心率</string>
    <string name="health_blood_oxygen">血氧</string>
    <string name="health_electdiogram">心电图</string>
    <string name="health_respiratory_rate">呼吸率</string>
    <string name="health_temperature">体温</string>
    <string name="health_blood_pressure">血压</string>
    <string name="health_alcohol">酒精</string>
    <string name="measure_posture">测量中,请保持姿势稳定</string>
    <string name="respiratory_rate_knowledge">了解呼吸率知识</string>
    <string name="label_respiratory_rate">呼吸率</string>
    <string name="brlow">您的呼吸率低于国际正常标准，建议平时多锻炼身体，更多了解请咨询医生</string>
    <string name="brnomall">您的呼吸率处于国际正常标准，感谢您的使用，祝您身体健康</string>
    <string name="brhrhigh">您的呼吸率高于国际正常标准，请再次测量，测量时请保持安静，更多了解请咨询医生</string>
    <string name="heart_rate_knowledge">了解心率知识</string>
    <string name="heart_rate">心率</string>
    <string name="label_heart_rate">测心率</string>
    <string name="label_blood_pressure">医用血压计</string>
    <string name="measure_result">测量结果</string>
    <string name="heart_rate_low">心率偏低</string>
    <string name="heart_rate_high">心率偏高</string>
    <string name="heart_rate_middle">心率正常</string>
    <string name="hrlow">您的心率值低于国际正常标准，请再次测量，测量时请保持安静，放松心情，更多了解请咨询医生</string>
    <string name="hrnomall">您的心率值处于国际正常标准，感谢您的使用，祝您身体健康</string>
    <string name="hrhigh">您的心率值高于国际正常标准，请再次测量，测量请时保持安静，放松心情，更多了解请咨询医生</string>
    <string name="blood_pressure_knowledge">了解血压知识</string>
    <string name="blood_pressure">医用血压计</string>
</resources>