<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@color/head_323031"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#00000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/activity_chooseuser_finish"
            android:layout_width="48dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/base_bg_cancal_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/brown_d1aa71"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/head_tv_title"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/my_title"
            android:textColor="@color/brown_d1aa71"
            android:textSize="16dp" />

        <Button
            android:id="@+id/activity_chooseuser_ensure"
            android:layout_width="48dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/basetrue_selector"
            android:gravity="center"
            android:text="@string/makesure"
            android:textColor="@color/title_333333"
            android:textSize="14dp" />

    </RelativeLayout>
</LinearLayout>